tables draft 1 and rel view save